--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
 				<li><a class="smoothscroll" href="#about" title="">About</a></li>
 				<li><a class="smoothscroll" href="#services" title="">Services</a></li>
-				<li><a class="smoothscroll" href="#portfolio" title="">Works</a></li>
+				<li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
 				<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
 			</ul>
 
@@ -148,7 +148,7 @@
 				<div class="intro">
 					<h3 class="animate-this">About Me</h3>
 					<p class="lead animate-this"><span>AGHOGHOVWIA Andrew </span>is a freelance web & mobile app
-						developer from Delta State, Nigeria.</p>
+						developer with a passion for excellence</p>
 				</div>
 
 			</div> <!-- end col-full  -->
@@ -184,12 +184,9 @@
 					<span class="icon"><i class="icon-paint-brush"></i></span>
 
 					<div class="service-content">
-						<h3 class="h05">Branding</h3>
+						<h3 class="h05">Objectives</h3>
 
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-							architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-							aspernatur aut odit aut fugit.
+						<p>Hard-working web developer with a flair for creating elegant solutions in the least amount of time. Developed an ecommerce webapp, customer web portal, documentary launch website, and donations webapp for a local charity. Passionate about software architecture and cloud computing. Regular attendee of web developer meetups and hackathons.
 						</p>
 					</div>
 
@@ -200,12 +197,11 @@
 					<span class="icon"><i class="icon-earth"></i></span>
 
 					<div class="service-content">
-						<h3 class="h05">Web Design</h3>
+						<h3 class="h05">Design</h3>
 
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-							architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-							aspernatur aut odit aut fugit.
+						<p>Offering creative design solutions to solve business problems is what I do best.
+
+							I write in JavaScript, HTML, CSS, Java, NodeJS and PHP/Laravel. I also speak to databases and make servers do stuff. I love to work on scalability, performance, reusability, and great user experiences.
 						</p>
 					</div>
 
@@ -216,12 +212,9 @@
 					<span class="icon"><i class="icon-lego-block"></i></span>
 
 					<div class="service-content">
-						<h3 class="h05">Web Development</h3>
+						<h3 class="h05">Service</h3>
 
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-							architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-							aspernatur aut odit aut fugit.
+						<p>I offer a complete web/mobile and desktop solution to my clients. I can guide you through the early stages of project planning and research, help you with information architecture and user experience, create your designs, and finally build the application for you.
 						</p>
 					</div>
 
@@ -232,13 +225,12 @@
 					<span class="icon"><i class="icon-megaphone"></i></span>
 
 					<div class="service-content">
-						<h3 class="h05">Marketing</h3>
+						<h3 class="h05">Passion</h3>
 
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-							architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-							aspernatur aut odit aut fugit.
-						</p>
+						<p>My strength lies in paying attention to details no matter how small or irrelevant it may look.
+							I am passionate about using technology to solve problems encountered  in our daily lives.
+						
+						I am able to transform static artwork into pixel prefect, interactive and fully functional interfaces. Programming is life to me</p>
 					</div>
 
 				</div> <!-- end bgrid -->
