--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="css/vendor.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/loading-bar.min.css">
+	<link rel="stylesheet/less" type="text/CSS" href="css/style.less" />
 
 	<!-- script
    ================================================== -->
@@ -36,6 +37,42 @@
 </head>
 
 <body id="top">
+
+
+	<div class="outer-menu">
+		<input class="checkbox-toggle" type="checkbox" />
+		<div class="hamburger">
+		  <div></div>
+		</div>
+		<div class="menu">
+		  <div>
+			<div>
+				<ul class="nav-list">
+					<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
+					<li><a class="smoothscroll" href="#about" title="">About</a></li>
+					<li><a class="smoothscroll" href="#services" title="">Services</a></li>
+					<li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
+					<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
+				</ul>
+				<ul class="header-social-list">
+					<li>
+						<a href="#"><i class="fa fa-facebook-square"></i></a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-twitter"></i></a>
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-instagram"></i></a>
+					</li>
+					
+				</ul>
+			</div>
+		  </div>
+		</div>
+	
+	  </div>
+	
+
 
 	<!-- header 
    ================================================== -->
@@ -50,37 +87,7 @@
 			<span class="header-menu-icon"></span>
 		</a>
 
-		<nav id="menu-nav-wrap">
-
-			<a href="#0" class="close-button" title="close"><span>Close</span></a>
-
-			<h3>Androy</h3>
-
-			<ul class="nav-list">
-				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
-				<li><a class="smoothscroll" href="#about" title="">About</a></li>
-				<li><a class="smoothscroll" href="#services" title="">Services</a></li>
-				<li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
-				<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
-			</ul>
-
-
-
-			<ul class="header-social-list">
-				<li>
-					<a href="#"><i class="fa fa-facebook-square"></i></a>
-				</li>
-				<li>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-				</li>
-				<li>
-					<a href="#"><i class="fa fa-instagram"></i></a>
-				</li>
-				
-			</ul>
-
-		</nav> <!-- end #menu-nav-wrap -->
-
+		
 	</header> <!-- end header -->
 
 
@@ -616,6 +623,7 @@
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src='js/loading-bar.min.js'></script>
 	<script src="js/plugins.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
 	<script src="js/main.js"></script>
 
 </body>
